@@ -7,6 +7,7 @@ NEW FUNCTIONS:
 MINOR FEATURES AND BUG FIXES:
 
 * updated several functions to work when rspec object has only one spectrum
+* the use of relative quantum catches is now optional in the categorical colorspace (though still produces a warning), for greater flexibility 
 
 
 pavo 1.0
